// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`font weights bold is applied 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--bold kbnToolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;

exports[`font weights normal is applied 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--normal kbnToolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;

exports[`hasArrow is rendered 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--normal kbnToolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;

exports[`positions center is applied 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--groupCenter kbnToolbarButton--normal kbnToolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;

exports[`positions left is applied 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--groupLeft kbnToolbarButton--normal kbnToolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;

exports[`positions none is applied 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--normal kbnToolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;

exports[`positions right is applied 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--groupRight kbnToolbarButton--normal kbnToolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;

exports[`sizes m is applied 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--normal kbnToolbarButton--m"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="m"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;

exports[`sizes s is applied 1`] = `
<EuiButton
  className="kbnToolbarButton kbnToolbarButton--normal kbnToolbarButton--s"
  color="text"
  contentProps={
    Object {
      "className": "kbnToolbarButton__content",
    }
  }
  data-test-subj=""
  iconSide="right"
  iconType="arrowDown"
  onClick={[Function]}
  size="s"
  textProps={
    Object {
      "className": "kbnToolbarButton__text",
    }
  }
/>
`;
